5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1577_579.log
== TEST (2019-03-26 19:07:27) 
-- CODE:
print (¨A UFAM tem¨, 2016 - 1999, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1999, ¨anos de fundacao.¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:49) 
-- CODE:
print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:40) 
-- CODE:
print (¨A UFAM tem¨, 2016 - 1909 ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1909 ¨anos de fundacao.¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:43) 
-- CODE:
print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:49) 
-- CODE:
print (¨A UFAM tem¨, 2019 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2019 - 1909, ¨anos de fundacao.¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:24:03) 
-- CODE:
print (¨upper(A UFAM) tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨upper(A UFAM) tem¨, 2016 - 1909, ¨anos de fundacao.¨)
                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:24:11) 
-- CODE:
print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:25:58) 
-- CODE:
print (*¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨*)
-- ERROR:
File "XXXX", line 1
    print (*¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨*)
             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:06:47) 
-- CODE:
print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:10:45) 
-- CODE:
texto ¨a ufam tem upper. ¨, 2016 - 1901, ¨anos de fundacao. upper. ¨)
-- ERROR:
File "XXXX", line 1
    texto ¨a ufam tem upper. ¨, 2016 - 1901, ¨anos de fundacao. upper. ¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:10:52) 
-- CODE:
texto ¨a ufam tem upper. ¨, 2016 - 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    texto ¨a ufam tem upper. ¨, 2016 - 1901, ¨anos de fundacao.¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:11:22) 
-- CODE:
texto ¨a ufam tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    texto ¨a ufam tem¨, 2016 - 1901, ¨anos de fundacao.¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:11) 
-- CODE:
 print (¨a UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨a UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:19) 
-- CODE:
 print (¨a UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- EXECUTION TIME:
0.150804
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print (\xa8a UFAM tem\xa8, 2016 - 1901, \xa8anos de fundacao.\xa8)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:28) 
-- CODE:
 print(¨a UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨a UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:37) 
-- CODE:
 print(¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:12:40) 
-- CODE:
 print(¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- EXECUTION TIME:
0.239258
-- ERROR:
  File "/home/codebench/codes/1577/579/main.py", line 1
    print(\xa8A UFAM tem\xa8, 2016 - 1901, \xa8anos de fundacao.\xa8)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:30) 
-- CODE:
 print(¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
	print= texto
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:18) 
-- CODE:
 print(¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:40) 
-- CODE:
  print (¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1901, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:15:24) 
-- CODE:
  print (¨A UFAM tem¨, 2016 / 1901, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 / 1901, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:15:52) 
-- CODE:
  print (¨A UFAM tem¨, 2016 / 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 / 1909, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:16:13) 
-- CODE:
  print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:16:28) 
-- CODE:
  print(¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨, 2016 - 1909, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:16:41) 
-- CODE:
  print (¨A UFAM tem¨, 2016 / 1909, ¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 / 1909, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:17:28) 
-- CODE:
  print (¨A UFAM tem¨, 2016 / 1909, ¨anos de fundacao.¨)
	print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print (¨A UFAM tem¨, 2016 / 1909, ¨anos de fundacao.¨)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:17:35) 
-- CODE:

	print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- ERROR:
File "XXXX", line 2
    print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:17:43) 
-- CODE:

	print("A UFAM tem", 2016 / 1909, "anos de fundacao.")
-- ERROR:
File "XXXX", line 2
    print("A UFAM tem", 2016 / 1909, "anos de fundacao.")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:17:54) 
-- CODE:
print("A UFAM tem", 2016 / 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1.0560502881089575 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:18:04) 
-- CODE:
print("A UFAM tem", 2016 // 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 1 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:18:11) 
-- CODE:
print("A UFAM tem", 2016  1909, "anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016  1909, "anos de fundacao.")
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:18:21) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:18:31) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.191187
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
